--- a/CHALLENGE(1).html
+++ b/CHALLENGE(1).html
@@ -12,30 +12,49 @@
       <article>
         <h1>Converse Nike Air Force</h1>
 
-        <img src="img/download.jpg" alt="NIKE AIR FORCE" />
+        <img
+          class="img"
+          src="img/download.jpg"
+          alt="NIKE AIR FORCE"
+          height="250"
+          width="250"
+        />
 
-        <p class="price">
-          <strong>$65.00</strong>
-        </p>
+        <div class="first">
+          <p class="price">
+            <strong>$65.00</strong>
+          </p>
 
-        <p class="shipping">Free shipping</p>
+          <p class="shipping">Free shipping</p>
 
-        <p>
-          Ready to dress up or down, these classic <b>NIKE AIR FORCE</b> are an
-          everyday wardrobe staple.
-        </p>
+          <p class="product-details">
+            Ready to dress up or down, these classic <b>NIKE AIR FORCE</b> are
+            an everyday wardrobe staple.
+          </p>
 
-        <a href="https://charlestonshoeco.com/collections/new-arrivals">
-          More information&rarr;
-        </a>
+          <a href="https://charlestonshoeco.com/collections/new-arrivals">
+            More information&rarr;
+          </a>
 
-        <h2>Product details</h2>
+          <div class="colors">
+            <div class="color-black"></div>
+            <div class="color-blue"></div>
+            <div class="color-red"></div>
+            <div class="color-yellow"></div>
+            <div class="color-green"></div>
+            <div class="color-brown"></div>
+          </div>
+        </div>
 
-        <ul class="list">
-          <li>Lightweight, durable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Nike Force ankle patch</li>
-        </ul>
+        <div class="second">
+          <h3>Product details</h3>
+
+          <ul class="list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Nike Force ankle patch</li>
+          </ul>
+        </div>
 
         <footer>
           <button>Add to cart</button>
