--- a/CHALLENGE(1).html
+++ b/CHALLENGE(1).html
@@ -20,29 +20,30 @@
           width="250"
         />
 
-        <div class="first">
-          <p class="price">
-            <strong>$65.00</strong>
-          </p>
+        <div class="product-info">
+          <div class="product-price">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
 
-          <p class="shipping">Free shipping</p>
+          <div class="bluey">
+            <p class="product-details">
+              Ready to dress up or down, these classic <b>NIKE AIR FORCE</b> are
+              an everyday wardrobe staple.
+            </p>
 
-          <p class="product-details">
-            Ready to dress up or down, these classic <b>NIKE AIR FORCE</b> are
-            an everyday wardrobe staple.
-          </p>
+            <a href="https://charlestonshoeco.com/collections/new-arrivals">
+              More information&rarr;
+            </a>
 
-          <a href="https://charlestonshoeco.com/collections/new-arrivals">
-            More information&rarr;
-          </a>
-
-          <div class="colors">
-            <div class="color-black"></div>
-            <div class="color-blue"></div>
-            <div class="color-red"></div>
-            <div class="color-yellow"></div>
-            <div class="color-green"></div>
-            <div class="color-brown"></div>
+            <div class="colors">
+              <div class="color-black"></div>
+              <div class="color-blue"></div>
+              <div class="color-red"></div>
+              <div class="color-yellow"></div>
+              <div class="color-green"></div>
+              <div class="color-brown"></div>
+            </div>
           </div>
         </div>
 
