--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
 
       <!-- <div class="clear"></div> -->
-      
+       
     </header>
 
     <div class="row">
@@ -181,6 +181,6 @@
     </footer>
     </div>
    
-   <button>💗Like</button>
-  </body>
-  </html>
+    <button>💗Like</button
+   </body>
+   </html>
