--- a/css-grid.html
+++ b/css-grid.html
@@ -43,21 +43,27 @@
         font-size: 30px;
         margin: 40px;
 
-        /* FLEXBOX */
-        display: flex;
+        /* CSS GRID */
+        display: grid;
+        grid-template-columns: 200px 200px 100px 100px;
+        grid-template-rows: 300px 200px;
+
+        /* gap: 30px; */
+        column-gap: 30px;
+        row-gap: 60px;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="el el--1">HTML</div>
-      <div class="el el--2">and</div>
-      <div class="el el--3">CSS</div>
-      <div class="el el--4">are</div>
-      <div class="el el--5">amazing</div>
-      <div class="el el--6">languages</div>
-      <div class="el el--7">to</div>
-      <div class="el el--8">learn</div>
+      <div class="el el--1">(1) HTML</div>
+      <div class="el el--2">(2) and</div>
+      <div class="el el--3">(3) CSS</div>
+      <div class="el el--4">(4) are</div>
+      <div class="el el--5">(5) amazing</div>
+      <div class="el el--6">(6) languages</div>
+      <div class="el el--7">(7) to</div>
+      <div class="el el--8">(8) learn</div>
     </div>
   </body>
 </html>
