floats,flexbox & CSS grid

--- a/CHALLENGE(1).html
+++ b/CHALLENGE(1).html
@@ -58,7 +58,7 @@
         </div>
 
         <footer>
-          <button>Add to cart</button>
+          <button><p class="butt">Add to cart</p></button>
         </footer>
       </article>
     </div>
