--- a/css-grid.html
+++ b/css-grid.html
@@ -13,6 +13,7 @@
       .el--1 {
         background-color: blueviolet;
       }
+
       .el--2 {
         background-color: orangered;
       }
@@ -38,19 +39,94 @@
 
       .container {
         /* STARTER */
-        font-family: sans-serif;
         background-color: #ddd;
         font-size: 30px;
         margin: 40px;
+        /* border: 4px solid black; */
+        /* box-shadow: 3px 7px 20px 3px black; */
+        /* border: 2px solid black;v */
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 200px 200px 100px 100px;
-        grid-template-rows: 300px 200px;
+        /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+        /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+        /* grid-template-rows: 300px 200px; */
+
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        /* height: 500px; */
 
         /* gap: 30px; */
-        column-gap: 30px;
-        row-gap: 60px;
+        column-gap: 20px;
+        row-gap: 40px;
+
+        /* TEMPORARY */
+        display: none;
+      }
+
+      .el--8 {
+        /* grid-column-start: 2;
+        grid-column-end: 3; */
+
+        grid-column: 2 /3;
+        grid-row: 1/ 2;
+
+        /* grid-row-start: 1; */
+      }
+
+      .el--2 {
+        /* grid-column: 1/2; */
+
+        /* grid-column: 1 / span 4; */
+
+        grid-column: 1 / -1;
+        /* grid-row: 2/3; */
+        grid-row: 2;
+      }
+
+      /* .el--6 {
+        grid-row: 3/ 4;
+      } */
+
+      /* .el--4 {
+        grid-row: 4 / 5;
+      } */
+
+      .container--2 {
+        /* STARTER */
+        font-family: sans-serif;
+        background-color: black;
+        font-size: 40px;
+        margin: 70px;
+
+        width: 700px;
+        height: 600px;
+
+        /* CSS GRID */
+        display: grid;
+        grid-template-columns: 150px 200px 125px;
+        grid-template-rows: 250px 100px;
+        grid-gap: 50px;
+
+        /* Aligning tracks inside container:
+        distribute empty space */
+
+        justify-content: center;
+        /* justify-content: space-between; */
+
+        align-content: center;
+
+        /* Aligning items INSIDE cells: moving items around
+        inside cells */
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        /* align is for VERTICAL */
+        align-self: center;
+        /* justify is for HORIZONTAL */
+        justify-self: center;
       }
     </style>
   </head>
@@ -62,8 +138,19 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
+    </div>
+
+    <div class="container--2">
+      <div class="el el--1">(1)</div>
+      <!-- <div class="el el--2">(2) and</div> -->
+      <div class="el el--3">(3)</div>
+      <div class="el el--4">(4)</div>
+      <div class="el el--5">(5)</div>
+      <div class="el el--6">(6)</div>
+      <div class="el el--7">(7)</div>
+      <!-- <div class="el el--8">(8) learn</div> -->
     </div>
   </body>
 </html>
